# things-to-check

./: .travis.yml  Cargo.toml  LICENSE.md  Procfile  README.md  app.json  app.py  build.rs  requirements.txt  rust-toolchain  tests.py  things-to-check.yml
.circleci/: config.yml
.git-hooks/: pre-commit  pre-merge-commit
.github/workflows/: nightly-rust-update.yml  tests.yml
proptest-regressions/: twelve.txt
src/: lib.rs  main.rs  thing.struct.rs  things-to-check.yml  twelve.rs  view.rs
templates/: index.html  index.rs.html
tools/: README.md  check-dependencies  check-lints  check-tests  checks  install-tool-dependencies  update-nightly
