[package]
name = "things-to-check"
version = "0.4.2-alpha.0"
repository = "https://github.com/ojacobson/things-to-check/"
publish = false
authors = ["Owen Jacobson <owen@grimoire.ca>"]
homepage = "https://things-to-check.herokuapp.com/"
edition = "2018"

[badges.travis-ci]
project = "ojacobson/things-to-check"
branch = "main"

[dependencies]
actix-rt = "~1.0"
actix-web = "~2.0"
pulldown-cmark = "~0.7"
rand = "~0.7"
serde = "~1.0"
serde_urlencoded = "~0.6"
serde_yaml = "~0.8"
thiserror = "~1.0"
url = "~2.1"

[dependencies.maud]
git = "https://github.com/lambda-fairy/maud"
features = ["actix-web"]

[dev-dependencies]
lazy_static = "~1.4"
quickcheck = "~0.9"
quickcheck_macros = "~0.9"
